--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="cmx-user-menu__user">
         <div class="cmx-main-nav__icon cmx-main-nav__icon--regular user-menu__user-icon">TH</div>
         <div class="cmx-user-menu__user-details">
-            <h4 class="cmx-user-menu__user-name">Test Houston</h4>
-            <span class="cmx-user-menu__user-email">houston.shell.test@gmail.com</span>
+            <h4 class="cmx-user-menu__user-name">Test2 Houston</h4>
+            <span class="cmx-user-menu__user-email">houston2.shell.test@gmail.com</span>
         </div>
         <!-- end .user-menu-details -->
     </div>
