--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" charset="utf-8">
+<script type="text/javascript" charset="utf-8">
         let userName;
         let userEmail;
         window.onload = userMenuPopout;
-        (function (g, e, n, es, ys) {
-            g['_genesysJs'] = e;
-            g[e] = g[e] || function () {
-                (g[e].q = g[e].q || []).push(arguments)
-            };
-            g[e].t = 1 * new Date();
-            g[e].c = es;
-            ys = document.createElement('script');
-            ys.async = 1;
-            ys.src = n;
-            ys.charset = 'utf-8';
-            document.head.appendChild(ys);
-        })(window, 'Genesys', 'https://apps.mypurecloud.com/genesys-bootstrap/genesys.min.js', {
-            environment: 'prod',
-            deploymentId: 'd1eb9710-3f40-49ea-9f8f-abf9706aacb5'
-        });
+  (function (g, e, n, es, ys) {
+    g['_genesysJs'] = e;
+    g[e] = g[e] || function () {
+      (g[e].q = g[e].q || []).push(arguments)
+    };
+    g[e].t = 1 * new Date();
+    g[e].c = es;
+    ys = document.createElement('script'); ys.async = 1; ys.src = n; ys.charset = 'utf-8'; document.head.appendChild(ys);
+  })(window, 'Genesys', 'https://apps.mypurecloud.com/genesys-bootstrap/genesys.min.js', {
+    environment: 'prod',
+    deploymentId: '7b785b34-9aeb-49cb-8748-ca1aeedf9300'
+  });
+
 
 
         function userMenuPopout() {
