--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
 </head>
 <body>
-<h1>Web Messaging</h1>
-<title>Web Messaging</title>
+<h1>Web Messaging ROdro</h1>
+<title>Web Messaging Rodro</title>
 <div id="userMenuPopout" class="cmx-user-menu__container popout popout--bottom-left popout--with-border">
     <div class="cmx-user-menu__user">
         <div class="cmx-main-nav__icon cmx-main-nav__icon--regular user-menu__user-icon">TH</div>
